Fixing the navigation icons for RTL pages. Espcially the stories icon is now aligned properly.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -3280,7 +3280,6 @@ svg.logo-icon {
 
 #header nav svg.create-report-icon {
   top: 8px;
-  left: -1px;
   width: 26px;
   height: 32px;
 }
